Remove useless or deprecated sbt options